--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Asker Transport</title>
+  <title>Askar Transport</title>
   <base href="/">
 
   <!-- Login Content Start-->
