added static file

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ever Safe Packer and Mover</title>
+  <title>My Company</title>
   <base href="/" />
 
   <!-- Login Content Start-->
